# cargo-raze-minimal

./: WORKSPACE
bazel/: repositories.bzl  rust.bzl
rust/: Cargo.toml
rust/filters/: Cargo.toml
rust/filters/examples/: BUILD.bazel
