[workspace]

members = [
    "filters"
]

[workspace.metadata.raze]
# The path at which to write output files.
#
# `cargo raze` will generate Bazel-compatible BUILD files into this path.
# This can either be a relative path (e.g. "foo/bar"), relative to this
# Cargo.toml file; or relative to the Bazel workspace root (e.g. "//foo/bar").
workspace_path = "//bazel/cargo"

render_package_aliases = true

# Sets the workspace target for rules_rust
rust_rules_workspace_name = "rules_rust"

# The two acceptable options are "Remote" and "Vendored" which
# is used to indicate whether the user is using a non-vendored or
# vendored set of dependencies.
genmode = "Remote"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[workspace.metadata.raze.crates.getrandom.'=0.2.0']
gen_buildrs = true

[workspace.metadata.raze.crates.libc.'=0.2.81']
gen_buildrs = true

[workspace.metadata.raze.crates.log.'=0.4.11']
gen_buildrs = true
