[package]
name = "filters"
version = "0.1.0"
authors = ["Jonathan Howard <jhoward@riotgames.com>"]
edition = "2018"

[features]
wee-alloc = ["wee_alloc"]

[dependencies]
hashbrown = "0.9"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }
proxy-wasm = { path = "../../third-party/proxy-wasm" }

[dev-dependencies]
cfg-if = "1.0"
chrono = "0.4"

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
getrandom = "0.2"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["cdylib"]

