load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "hello_world",
    srcs = ["hello_world.rs"],
    crate_type = "cdylib",
    edition = "2018",
    out_binary = True,
    deps = [
        "@rust_proxy_wasm//:proxy_wasm",
        "//bazel/cargo:cfg_if",
        "//bazel/cargo:chrono",
        "//bazel/cargo:log",
    ] + select({
        "@rules_rust//rust/platform:wasm32-unknown-unknown": [],
        "//conditions:default": ["//bazel/cargo:getrandom"],
    }),
)
